moved command like args